_scss/templates/_event-section2.scss
.event-section2 {
  @include display_flex();
  @include flex_flex-direction(column);
  @include flex_justify-content(start);
  padding: 25px 10px;
  line-height: 1.8rem;

  @include mq($from: tablet) {
    padding: 30px 50px 0;
  }

  .resume-list {
    display: none;
    min-width: 300px;
    max-width: 980px;
    width: 70%;
    list-style: none;
    list-style-image: url('/imgs/ico-hex-nav.png');
    margin: 0 auto;

    @include mq($from: tablet) {
      display: block;
    }

    li {
      font-size: 17px;
      font-weight: 300;

    }
  }

  .more-info {
    @include display_flex();
    @include flex_flex-direction(column);
    @include flex_justify-content(center);
    @include flex_align-items(center);
    margin: 0;
    font-size: 17px;
    font-weight: 300;

    @include mq($from: tablet) {
      @include flex_flex-direction(row);
      @include flex_align-items(flex-start);
      margin: 20px 0;
    }

    &-left,
    &-right {
      @include flex_flex(1 0 0);
      margin: 15px 0;
      min-height: 0;

      @include mq($from: tablet) {
        @include flex_flex(1 1 50%);
        margin: 0 30px;
      }

      @include mq($from: desktop) {
        margin: 0 60px;
      }

      h3 {
        position: relative;
        display: inline-block;
        margin-top: 0;
        padding-right: 30px;
        font-size: 38px;
        font-weight: 100;
        font-style: italic;
        line-height: 45px;
        overflow: hidden;

        span {
          display: block;
          position: absolute;
          top: 25%;
          left: 0;
          width: 130%;
          height: 50%;
          background-color: $DETAIL-CYAN;
          transform: skewY(-5deg);
          z-index: -1;
        }
      }

      ul {
        padding: 0 1rem;
        line-height: 1.5rem;
      }

      p:not(last-child),
      ul:not(last-child) {
        margin-bottom: 10px;
      }

      p + ul {
        margin-left: 20px;
      }
    }
  }
}

